--- a/students_submissions/8902043/lab2.ipynb
+++ b/students_submissions/8902043/lab2.ipynb
@@ -28,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Line Graph using Matpltlib.subplots"
+    "1. Line Graph using Matpltlib.subplots\n",
+    "\n",
+    "Contains single axes"
    ]
   },
   {
@@ -60,6 +62,14 @@
    "source": [
     "fig, ax = plt.subplots()  # Create a figure containing a single axes.\n",
     "ax.plot([1, 2, 3, 4,5], [1, 4, 10, 3,-15])  # Plot some data on the axes."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Line Graph using Matpltlib.subplots"
    ]
   },
   {
@@ -103,6 +113,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Line Graph using seaborn package\n",
+    "\n",
+    "reference: https://seaborn.pydata.org/examples/index.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -139,6 +159,14 @@
     "sns.lineplot(x=\"timepoint\", y=\"signal\",\n",
     "             hue=\"region\", style=\"event\",\n",
     "             data=fmri)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Scatter Graph using plotly"
    ]
   },
   {
@@ -1990,11 +2018,18 @@
     "                 size='petal_length', hover_data=['petal_width'])\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CSCN8010_classic_ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2008,9 +2043,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
