--- a/students_submissions/8936740/Lab2.ipynb
+++ b/students_submissions/8936740/Lab2.ipynb
@@ -289,6 +289,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Magic code for Convert to HTML"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "jupyter nbconvert --to html ./students_submissions/8936740/Lab2.ipynb --output-dir ./docs/8936740 --TagRemovePreprocessor.enabled=True --TagRemovePreprocessor.remove_input_tags=\"['noshow']\""
    ]
   }
