--- a/students_submissions/8896658/lab2.ipynb
+++ b/students_submissions/8896658/lab2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,8 @@
    ],
    "source": [
     "import plotly.graph_objects as go\n",
-    "\n",
+    "import plotly\n",
+    "plotly.offline.init_notebook_mode()\n",
     "labels = ['Category A', 'Category B', 'Category C']\n",
     "values = [30, 40, 30]\n",
     "\n",
