--- a/students_submissions/8894805/lab2.ipynb
+++ b/students_submissions/8894805/lab2.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Foundation Machine Learning Framework"
+    "# Foundation Machine Learning Framework\n",
+    "\n",
+    "# Waseem Raja Shaik 8894805"
    ]
   },
   {
