--- a/students_submissions/8889436/lab3.ipynb
+++ b/students_submissions/8889436/lab3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,9 +68,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Statistics of data of diabeties_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": [
+     "noshow"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -182,7 +194,7 @@
        "Maxmium             1.335973e-01  1.356118e-01  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,9 +210,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Statistics of data of diabeties_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": [
+     "noshow"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -230,9 +254,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>col3</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Standard Deviation</th>\n",
+       "      <th>Minimum Value</th>\n",
+       "      <th>Maximum Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -241,17 +266,18 @@
        "      <td>152.133484</td>\n",
        "      <td>77.005746</td>\n",
        "      <td>25.0</td>\n",
+       "      <td>346.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          age        sex  col3\n",
-       "0  152.133484  77.005746  25.0"
+       "         Mean  Standard Deviation  Minimum Value  Maximum Value\n",
+       "0  152.133484           77.005746           25.0          346.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,19 +292,15 @@
     "\n",
     "print(y_sd)\n",
     "\n",
-    "d = {'age': [y_mean], 'sex': [y_sd], 'col3': [y_min]}\n",
+    "data_poyab = {'Mean': [y_mean], 'Standard Deviation': [y_sd], 'Minimum Value': [y_min], 'Maximum Value':y_max, }\n",
     "\n",
-    "df = pd.DataFrame(data=d)\n",
-    "count_column = df.shape[1]\n",
-    "row_names = ['Mean', 'Standard Deviation', 'Minimum', 'Maxmium']\n",
-    "\n",
-    "df = pd.DataFrame([y_mean, y_sd, y_min, y_max], index=stat_means, column=row_names)\n",
+    "df = pd.DataFrame(data=data_poyab)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
