created a single dataframe

--- a/students_submissions/8889436/lab3.ipynb
+++ b/students_submissions/8889436/lab3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,218 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s2</th>\n",
+       "      <th>s3</th>\n",
+       "      <th>s4</th>\n",
+       "      <th>s5</th>\n",
+       "      <th>s6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.038076</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.061696</td>\n",
+       "      <td>0.021872</td>\n",
+       "      <td>-0.044223</td>\n",
+       "      <td>-0.034821</td>\n",
+       "      <td>-0.043401</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.019907</td>\n",
+       "      <td>-0.017646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.001882</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.051474</td>\n",
+       "      <td>-0.026328</td>\n",
+       "      <td>-0.008449</td>\n",
+       "      <td>-0.019163</td>\n",
+       "      <td>0.074412</td>\n",
+       "      <td>-0.039493</td>\n",
+       "      <td>-0.068332</td>\n",
+       "      <td>-0.092204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.085299</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.044451</td>\n",
+       "      <td>-0.005670</td>\n",
+       "      <td>-0.045599</td>\n",
+       "      <td>-0.034194</td>\n",
+       "      <td>-0.032356</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.002861</td>\n",
+       "      <td>-0.025930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.089063</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.011595</td>\n",
+       "      <td>-0.036656</td>\n",
+       "      <td>0.012191</td>\n",
+       "      <td>0.024991</td>\n",
+       "      <td>-0.036038</td>\n",
+       "      <td>0.034309</td>\n",
+       "      <td>0.022688</td>\n",
+       "      <td>-0.009362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.005383</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.036385</td>\n",
+       "      <td>0.021872</td>\n",
+       "      <td>0.003935</td>\n",
+       "      <td>0.015596</td>\n",
+       "      <td>0.008142</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>-0.031988</td>\n",
+       "      <td>-0.046641</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        age       sex       bmi        bp        s1        s2        s3   \n",
+       "0  0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401  \\\n",
+       "1 -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
+       "2  0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n",
+       "3 -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
+       "4  0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
+       "\n",
+       "         s4        s5        s6  \n",
+       "0 -0.002592  0.019907 -0.017646  \n",
+       "1 -0.039493 -0.068332 -0.092204  \n",
+       "2 -0.002592  0.002861 -0.025930  \n",
+       "3  0.034309  0.022688 -0.009362  \n",
+       "4 -0.002592 -0.031988 -0.046641  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting the datas into dataframe\n",
+    "#Converting for diabetes_X\n",
+    "diabetes_X = pd.DataFrame(diabetes_X)\n",
+    "diabetes_X.columns=feature_names\n",
+    "diabetes_X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Disease Progression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>151.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>141.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>206.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>135.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Disease Progression\n",
+       "0                151.0\n",
+       "1                 75.0\n",
+       "2                141.0\n",
+       "3                206.0\n",
+       "4                135.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Converting for diabetes_y\n",
+    "diabetes_y = pd.DataFrame(diabetes_y)\n",
+    "diabetes_y.columns= ['Disease Progression']\n",
+    "diabetes_y.head()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -77,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "noshow"
@@ -194,19 +406,19 @@
        "Maxmium             1.335973e-01  1.356118e-01  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_mean = np.mean(diabetes_X, axis=0)\n",
-    "X_sd = np.std(diabetes_X, axis=0)\n",
-    "X_min = np.min(diabetes_X,axis=0)\n",
-    "X_max = np.max(diabetes_X, axis=0)\n",
-    "stat_names = ['Mean', 'Standard Deviation', 'Minimum', 'Maxmium']\n",
-    "df = pd.DataFrame([X_mean, X_sd, X_min, X_max], columns=feature_names, index=stat_names)\n",
-    "df\n"
+    "# X_mean = np.mean(diabetes_X, axis=0)\n",
+    "# X_sd = np.std(diabetes_X, axis=0)\n",
+    "# X_min = np.min(diabetes_X,axis=0)\n",
+    "# X_max = np.max(diabetes_X, axis=0)\n",
+    "# stat_names = ['Mean', 'Standard Deviation', 'Minimum', 'Maxmium']\n",
+    "# df = pd.DataFrame([X_mean, X_sd, X_min, X_max], columns=feature_names, index=stat_names)\n",
+    "# df\n"
    ]
   },
   {
@@ -219,20 +431,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "tags": [
      "noshow"
     ]
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "77.00574586945044\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -262,10 +467,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>152.133484</td>\n",
-       "      <td>77.005746</td>\n",
-       "      <td>25.0</td>\n",
+       "      <th>Disease Progression</th>\n",
+       "      <td>Disease Progression    152.133484\n",
+       "dtype: float64</td>\n",
+       "      <td>Disease Progression    77.005746\n",
+       "dtype: float64</td>\n",
+       "      <td>Disease Progression    25.0\n",
+       "dtype: float64</td>\n",
        "      <td>346.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -273,34 +481,40 @@
        "</div>"
       ],
       "text/plain": [
-       "         Mean  Standard Deviation  Minimum Value  Maximum Value\n",
-       "0  152.133484           77.005746           25.0          346.0"
+       "                                                                 Mean   \n",
+       "Disease Progression  Disease Progression    152.133484\n",
+       "dtype: float64  \\\n",
+       "\n",
+       "                                                  Standard Deviation   \n",
+       "Disease Progression  Disease Progression    77.005746\n",
+       "dtype: float64  \\\n",
+       "\n",
+       "                                                  Minimum Value  Maximum Value  \n",
+       "Disease Progression  Disease Progression    25.0\n",
+       "dtype: float64          346.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_mean = np.mean(diabetes_y, axis=0)\n",
-    "y_sd = np.std(diabetes_y, axis=0)\n",
-    "y_min =  np.min(diabetes_y,axis=0)\n",
-    "y_max = np.max(diabetes_y, axis=0)\n",
-    "column_name =feature_names\n",
+    "# y_mean = np.mean(diabetes_y, axis=0)\n",
+    "# y_sd = np.std(diabetes_y, axis=0)\n",
+    "# y_min =  np.min(diabetes_y,axis=0)\n",
+    "# y_max = np.max(diabetes_y, axis=0)\n",
+    "# column_name =feature_names\n",
     "\n",
+    "# data_poyab = {'Mean': [y_mean], 'Standard Deviation': [y_sd], 'Minimum Value': [y_min], 'Maximum Value':y_max, }\n",
     "\n",
-    "print(y_sd)\n",
-    "\n",
-    "data_poyab = {'Mean': [y_mean], 'Standard Deviation': [y_sd], 'Minimum Value': [y_min], 'Maximum Value':y_max, }\n",
-    "\n",
-    "df = pd.DataFrame(data=data_poyab)\n",
-    "df"
+    "# df = pd.DataFrame(data=data_poyab)\n",
+    "# df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
