--- a/students_submissions/8901525/lab3.ipynb
+++ b/students_submissions/8901525/lab3.ipynb
@@ -1259,6 +1259,14 @@
     "# Accuracy of the model\n",
     "print(\"R-Squared of the model: \",lr.score(x,y))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this data we cannot find the accurate result as we cannot defind diabeties from one feature because every feature matters to find accurate result."
+   ]
   }
  ],
  "metadata": {
