edited calucaltion output

--- a/students_submissions/8889436/lab3.ipynb
+++ b/students_submissions/8889436/lab3.ipynb
@@ -6149,17 +6149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The coefficient :\n",
-      "0    974.4821\n",
-      "dtype: float64\n",
-      "\n",
+      "The coefficient :[974.48209999]\n",
       "The intercept is : 152.45404935855575\n",
       "Mean squared error: 3898.26\n",
       "Mean Absolute Error : 49.325126131634555\n"
@@ -6168,10 +6165,10 @@
    ],
    "source": [
     "# coefficient & intercept\n",
-    "m_coff = pd.Series(model.coef_)\n",
+    "m_coff = model.coef_\n",
     "m_intcpt = model.intercept_\n",
     "\n",
-    "print(f\"The coefficient :\\n{m_coff}\\n\\nThe intercept is : {m_intcpt}\")\n",
+    "print(f\"The coefficient :{m_coff}\\nThe intercept is : {m_intcpt}\")\n",
     "\n",
     "# Mean Squared Error\n",
     "mse = metrics.mean_squared_error(y_test, predict_y)\n",
