further editing on output

--- a/students_submissions/8889436/lab3.ipynb
+++ b/students_submissions/8889436/lab3.ipynb
@@ -6168,14 +6168,14 @@
     "m_coff = model.coef_\n",
     "m_intcpt = model.intercept_\n",
     "\n",
-    "print(f\"The coefficient :{m_coff}\\nThe intercept is : {m_intcpt}\")\n",
+    "print(f\"Coefficient:{m_coff}\\nThe Intercept: {m_intcpt}\")\n",
     "\n",
     "# Mean Squared Error\n",
     "mse = metrics.mean_squared_error(y_test, predict_y)\n",
-    "print('Mean squared error: %.2f' % mse)\n",
+    "print('Mean Squared Error: %.2f' % mse)\n",
     "\n",
     "mae = metrics.mean_absolute_error(y_test, predict_y)\n",
-    "print(f\"Mean Absolute Error : {mae}\")"
+    "print(f\"Mean Absolute Error: {mae}\")"
    ]
   },
   {
