ARJUN KC(8773456) lab3 assignment-html file updated

--- a/students_submissions/8773456/lab 3/diab_UVLR.ipynb
+++ b/students_submissions/8773456/lab 3/diab_UVLR.ipynb
@@ -1639,7 +1639,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -) Training data is dispersed too much, BMI vs Disease Progression has normal corelation so I think linear regression is not that good for this model."
+    "#### -) Training data is dispersed too much, BMI vs Disease Progression has normal corelation so I think linear regression is not that good for this model.\n",
+    "#### -) Also from loss function we can see that we have high Mean Absloute Error which means the model is not functioning effectively and the forecasts are far from the actual values, according to a high MAE."
    ]
   }
  ],
