--- a/students_submissions/8894805/lab3.ipynb
+++ b/students_submissions/8894805/lab3.ipynb
@@ -1304,7 +1304,11 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "noshow"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
