Updated comment on data

--- a/students_submissions/7526387/lab3.ipynb
+++ b/students_submissions/7526387/lab3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_X, df_y = datasets.load_diabetes(return_X_y=True, scaled=False, as_frame=True)\n"
+    "df_X, df_y = datasets.load_diabetes(return_X_y=True, scaled=False, as_frame=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,13 +252,21 @@
        "[442 rows x 10 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_X"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The spread of the data is quite large."
    ]
   },
   {
@@ -279,7 +287,7 @@
    ],
    "source": [
     "plt.scatter(df_X['bmi'], df_y,  color='red')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
