--- a/students_submissions/8936740/Lab2.ipynb
+++ b/students_submissions/8936740/Lab2.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2492e46a650>"
+       "<matplotlib.image.AxesImage at 0x1b363c54a90>"
       ]
      },
      "execution_count": 3,
@@ -95,21 +95,21 @@
      "data": {
       "text/plain": [
        "[(0.0, 8.0),\n",
-       " [<matplotlib.axis.XTick at 0x2493052e010>,\n",
-       "  <matplotlib.axis.XTick at 0x2492de2bfd0>,\n",
-       "  <matplotlib.axis.XTick at 0x2492e4e1ed0>,\n",
-       "  <matplotlib.axis.XTick at 0x24930571350>,\n",
-       "  <matplotlib.axis.XTick at 0x24930567d10>,\n",
-       "  <matplotlib.axis.XTick at 0x2493057d190>,\n",
-       "  <matplotlib.axis.XTick at 0x2493057f510>],\n",
+       " [<matplotlib.axis.XTick at 0x1b363cb9150>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365cf51d0>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365d192d0>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365d356d0>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365d379d0>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365d3d090>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365d3f590>],\n",
        " (0.0, 8.0),\n",
-       " [<matplotlib.axis.YTick at 0x2492e4e2350>,\n",
-       "  <matplotlib.axis.YTick at 0x2492e4b9c90>,\n",
-       "  <matplotlib.axis.YTick at 0x24930556950>,\n",
-       "  <matplotlib.axis.YTick at 0x24930587c90>,\n",
-       "  <matplotlib.axis.YTick at 0x24930585050>,\n",
-       "  <matplotlib.axis.YTick at 0x2493058ec10>,\n",
-       "  <matplotlib.axis.YTick at 0x24930590f50>]]"
+       " [<matplotlib.axis.YTick at 0x1b363c360d0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b363cb9ad0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b363c7cdd0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365d47c10>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365d51ed0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365d526d0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365d54a10>]]"
       ]
      },
      "execution_count": 4,
@@ -237,21 +237,21 @@
      "data": {
       "text/plain": [
        "[(0.0, 8.0),\n",
-       " [<matplotlib.axis.XTick at 0x24930697790>,\n",
-       "  <matplotlib.axis.XTick at 0x24930660a50>,\n",
-       "  <matplotlib.axis.XTick at 0x249306a3fd0>,\n",
-       "  <matplotlib.axis.XTick at 0x249306f86d0>,\n",
-       "  <matplotlib.axis.XTick at 0x249306fab50>,\n",
-       "  <matplotlib.axis.XTick at 0x249306fcf50>,\n",
-       "  <matplotlib.axis.XTick at 0x249306ff310>],\n",
+       " [<matplotlib.axis.XTick at 0x1b365e7b290>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365d9c390>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365e2a450>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365ec4b90>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365ec6ed0>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365ec9290>,\n",
+       "  <matplotlib.axis.XTick at 0x1b365ecb510>],\n",
        " (0.0, 8.0),\n",
-       " [<matplotlib.axis.YTick at 0x249306d7a90>,\n",
-       "  <matplotlib.axis.YTick at 0x24930597d10>,\n",
-       "  <matplotlib.axis.YTick at 0x24930592890>,\n",
-       "  <matplotlib.axis.YTick at 0x2493070e4d0>,\n",
-       "  <matplotlib.axis.YTick at 0x249307107d0>,\n",
-       "  <matplotlib.axis.YTick at 0x249307129d0>,\n",
-       "  <matplotlib.axis.YTick at 0x24930718d90>]]"
+       " [<matplotlib.axis.YTick at 0x1b365e70bd0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365d01ad0>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365d45250>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365ed2590>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365ed8810>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365edac10>,\n",
+       "  <matplotlib.axis.YTick at 0x1b365edce90>]]"
       ]
      },
      "execution_count": 6,
@@ -305,7 +305,7 @@
   "kernelspec": {
    "display_name": "CSCN8010_classic_ml",
    "language": "python",
-   "name": "cscn8010_classic_ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -317,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
