--- a/students_submissions/7526387/lab3.ipynb
+++ b/students_submissions/7526387/lab3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "[442 rows x 10 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,21 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean squared error: 0.21\n",
+      "Mean squared error: 4150.68\n",
       "Intercept: 152.29\n",
       "Slope: 981.66\n"
      ]
     }
    ],
    "source": [
-    "print('Mean squared error: %.2f' % metrics.mean_squared_log_error(y_test, y_pred))\n",
+    "print('Mean squared error: %.2f' % metrics.mean_squared_error(y_test, y_pred))\n",
     "print('Intercept: %.2f' % model.intercept_)\n",
     "print('Slope: %.2f' % model.coef_)\n"
    ]
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
